--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "standart": "^6.1.0",
     "vite": "^5.0.8"
   },
   "eslintConfig": {
-    "extends" :[
+    "extends": [
       "standart"
     ]
   }
